css/style.css
/***************************************************
 * CSS Stylesheet for jpegery
 * *************************************************
 *
 * Stylesheet for jpegery's main pages
 * Built to be loaded after Bootstrap
 *
 ***************************************************/

/***************************************************
 * SECTION: Global Styles
 ***************************************************/

/* Prevent content from going under nav bar */
body {
	padding-top: 70px;
}

/***
* Flexbox Sticky Footer
* http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
* Minified for brevity.
***/
html { display: flex;} /*corrects IE min-height bug*/
body {display: flex; flex-direction: column; min-height: 100vh; width: 100%;}
.mainContent {flex: 1 0 auto;}

/***************************************************
 * SECTION: Navigation Bar
 ***************************************************/

/* Navbar background color */
.navbar-fixed-top {
	background: firebrick;
}

/* Color behind logo */
.navbar-brand {
	background-color: darkred;
	color: white;
}

/* Navigation bar non-active text color */
.navbar-fixed-top .navbar-nav > li > a {
	color: #56A0C9;
}

/* Navigation bar non-active hover color */
.navbar-fixed-top .navbar-nav > li > a:hover,
.navbar-fixed-top .navbar-nav > li > a:focus {
	color: white;
	background-color: #56A0C9;
}

/* Navigation bar active text and background */
.navbar-fixed-top .navbar-nav > .active > a,
.navbar-fixed-top .navbar-nav > .active > a:hover,
.navbar-fixed-top .navbar-nav > .active > a:focus {
	color: white;
	background-color: black;
}

/* Mobile (collapsed) button background color and icon bar color */
.navbar-toggle { background-color: darkred; }
.icon-bar { background-color: white; }

/***************************************************
 * SECTION: Above Content
 ***************************************************/

/* Adds a bit of space between search box and the buttons below it. */
.search {
	margin-bottom: 10px;
}


/***************************************************
 * SECTION: Content
 ***************************************************/

.contentContainer {

}

.contentRow {
	margin: 15px 5px 0;
}

/***************************************************
 * SECTION: Footer
 ***************************************************/
.footer {
	margin-top: 10px;
	padding: 10px 20px 5px;
	background-color: lightblue;
}

